--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ h1 {
 
 		<a href="catalog.html" class="btn btn-danger btn-lg btn-block" type="button">View Catalog</a>
 
-		<a href="https://courses.bxtdynamics.com" class="btn btn-primary btn-lg btn-block" type="button" disabled="disabled">Search Courses</a>
+		<a href="https://courses.bxtdynamics.com" class="btn btn-primary btn-lg btn-block" type="button">Search Courses</a>
 
 	</p>
 </div>
